--- a/servidor/package.json
+++ b/servidor/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon servidor.js"
+    "start": "node servidor.js",
+    "dev": "nodemon --require dotenv/config servidor.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "mysql": "^2.16.0"
   }
